Fixed width of image references (ul element) and added z-index: 1; to form element in home.html

--- a/finalproject/styles/final-project.css
+++ b/finalproject/styles/final-project.css
@@ -543,7 +543,7 @@ footer label:hover {
 }
 
 .image-references {
-    width: 780px;
+    width: auto;
     overflow: hidden;
     max-height: 0;
     padding: 0rem;
